# movavi_test_task

./: CMakeLists.txt  main.cpp  main_window.cpp  pyramid_image_proc.cpp  pyramid_image_proc.h
src/: main_window.cpp  main_window.h  pyramid_image_proc.cpp  pyramid_image_proc.h
